fix navbar bug overflow

--- a/src/app/common/navbar/navbar.component.scss
+++ b/src/app/common/navbar/navbar.component.scss
@@ -44,8 +44,11 @@ ul>li{
 nav {
   position: -webkit-sticky; /* Safari */
   position: fixed;
+  overflow-y: auto;
+  max-height: 100%;
   top: 0;
   z-index: 10;
+  @include hidescroll('&');
 }
 .upper-navbar-bg {
   background-color: #e9ecef;
@@ -210,8 +213,9 @@ nav {
 #responsiveMenu {
   background-color: white;
   transition: 0.2s;
-  height: 0;
   overflow-y: hidden;
+  height: 0;
+  position: relative;
   .mat-item {
     font-size: 14px;
     padding: 6.4px 24px;
@@ -233,12 +237,12 @@ nav {
       transform: rotate(0deg);
       transition: 0.7s;
     }
-    & > ul {
+    & >li> ul {
       height: 0;
       overflow: hidden;
     }
-    & > li:focus {
-      & + ul {
+    & > li:focus,&>li:focus-within {
+      & > ul {
         height: auto;
         padding-top: 8px;
         padding-bottom: 8px;
